fix nav disabled nav button being wrong size

--- a/_sass/_custom-responsive.scss
+++ b/_sass/_custom-responsive.scss
@@ -104,7 +104,7 @@
     }
 }
 @media screen and (max-width: 760px) {
-    .content p {
+    .content p, .content a {
         font-size: 1.2rem !important;
     }
     .content h1 {
