--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -160,6 +160,9 @@
 .pagination-previous {
     background-color: #f1d0af !important;
     color: #630100 !important;
+    margin: 4px !important;
+    padding-left: 0.75em !important;
+    padding-right: 0.75em !important;
 }
 .pagination-link {
     background-color: #f1d0af !important;
